This documents significant changes in the 1.0 branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2023-05-11:

- The ability to use multi-line editing is now detected at runtime instead of
  compile time, making detection more reliable across terminals and platforms.

2023-05-01:

- Fixes for indexed arrays declared to use enum constants for subscripts:
  - Syntax validation: add missing check for ] in 'typeset -a \[type] array'.
  - Fixed error message when type in 'typeset -a \[type] array' is unknown.
  - Fixed 'typeset -p' output of such arrays to quote the square brackets.

2023-04-09:

- Fixed command line redrawing on resizing the window with --multiline off.

- Multiline editing is now automatically disabled if and when the TERM
  environment variable is unset, not exported, or set to a terminal type
  that does not support the necessary operations. It is automatically
  reenabled when the TERM variable is corrected and --multiline is on.

2023-04-08:

- Fixed a termcap(5) detection bug that broke multiline editing on FreeBSD.

2023-04-05:

- Fixed a spurious syntax error in compound assignments upon encountering a
  pair of repeated opening parentheses '(('. This bug behaved differently
  depending on whether the compound assignment was outside or within a command
  substitution of the form $(...) or ${ ...; }. Both cases are now fixed.

- Fixed a parsing bug in arithmetic functions like
	function .sh.math.add x y { .sh.value=x+y; }
  so that the '.sh.value=x+y' is correctly interpreted as an assignment, not
  as a command name. After this, (( z = add(x,y) )) works correctly.

2023-04-03:

- Fixed multiple crashing bugs in discipline functions invoked from non-forked
  subshells, including corruption of the $_ variable.

2023-04-02:

- Corrected the 2022-07-05 fix for the detection of a syntax error in