@@ -2,6 +2,11 @@ This documents significant changes in the 1.0 branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2023-05-14:
+
+- Undocumented and non-functional goto label functionality has been removed.
+  Command names can now end in ':' like on other shells, as POSIX requires.
+
 2023-05-11:
 
 - The ability to use multi-line editing is now detected at runtime instead of
